k8s/gloo/8-default-gateways.yaml
---
# Source: gloo-ee/charts/gloo/templates/8-default-gateways.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: gateway-proxy
  namespace: gloo-system
  labels:
    app: gloo
spec:
  bindAddress: "::"
  bindPort: 8080
  httpGateway: {}

  useProxyProto: false
  ssl: false
  proxyNames:
  - gateway-proxy
---
# Source: gloo-ee/charts/gloo/templates/8-default-gateways.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: gateway-proxy-ssl
  namespace: gloo-system
  labels:
    app: gloo
spec:
  bindAddress: "::"
  bindPort: 8443
  httpGateway: {}

  useProxyProto: false
  ssl: true
  proxyNames:
  - gateway-proxy
